# ThreatSimGPT

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  FALKORDB_SETUP.md  FILE_USAGE_STATUS.md  ISSUE_132_IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  Makefile  PR_DESCRIPTION_ISSUE_132.md  README.md  REDESIGN_SUMMARY.md  REFACTORING_SUMMARY.md  SECURITY.md  TSG_ENVIRONMENT_SETUP.md  adaptive_difficulty_engine_issue.md  alembic.ini  code_quality_analysis_report.md  config.yaml  debug_rate_limiter.py  demo_refactored_architecture.py  docker-compose.yml  fix_openmp_conflicts.py  performance_benchmark.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-mcp.txt  requirements.txt  simple_test.py  test_adaptive_difficulty.py  test_all_features.py  test_all_features_fixed.py  test_attackagent_simple.py  test_attackagent_single_command.py  test_enhanced_validation.py  test_improved_attackagent.py  test_openmp_fix.py  test_refactored_simple.py  (+16 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  quality.yml  security.yml  test.yml
config/: claude_desktop_config.example.json  mcp.example.yaml  rag.yaml
deploy/helm/threatsimgpt/: Chart.yaml  README.md  values.yaml
deploy/k8s/: README.md
deploy/k8s/base/: api.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  redis.yaml  workers.yaml
deploy/k8s/optional/: ollama.yaml
docker/postgres/init/: 01-init-db.sh
docker/prometheus/: prometheus.yml
docs/: COMMIT_ATTRIBUTION.md  HIGH_IMPACT_CONTRIBUTIONS.md  README.md  dev-setup.md
docs/api/: API_DOCUMENTATION.md
docs/architecture/: README.md  adr-001-event-driven-architecture.md  adr-002-queue-redis.md  adr-003-stateful-stores.md  deployment-diagram.md
docs/community/: CONTRIBUTING.md  SECURITY.md
docs/compliance/: README.md
docs/compliance/audit/: README.md  audit-events-catalog.md  audit-logging-policy.md  audit-trail-integrity.md  compliance-reporting.md  evidence-collection.md  log-retention-policy.md
docs/compliance/gdpr/: README.md  breach-notification-templates.md  consent-management.md  data-mapping.md  data-processing-agreement.md  data-subject-rights.md  dpia.md  privacy-notice.md  records-of-processing.md
docs/compliance/policies/: acceptable-use-policy.md
docs/guides/: DEVELOPER_GUIDE.md  SECURITY_GUIDE.md  USER_GUIDE.md
docs/reference/: CONFIGURATION_REFERENCE.md
generated_content/: README.md  content_index.json
generated_content/knowledge_base/: threat_intel_knowledge.json
logs/: template_validation_audit.jsonl
migrations/: env.py
migrations/versions/: 001_create_events_table.py  002_create_snapshots_table.py
scripts/: setup_dev.py
templates/: README.md  advanced_variable_scenario.yaml  custom_executive_attack.yaml  executive_phishing.yaml  executive_smishing.yaml  finance_bec.yaml  it_helpdesk_impersonation.yaml  professional_demo_advanced_phishing.yaml  rich_adaptive_scenario.yaml  sample_phishing_template.yaml  supply_chain_compromise.yaml  supplychain_simulation.yaml  variable_executive_simulation.yaml
tests/: conftest.py
tests/full/: __init__.py  config.py  conftest.py  factories.py  utils.py
tests/full/mutation/: mutation_runner.py
tests/integration/: test_postgres_event_store.py  test_vectorstore_manager_integration.py  test_vm_attack_agent_integration.py
tests/unit/: test_batch_processor.py  test_cli.py  test_content_filter.py  test_content_filter_edge_cases.py  test_detection_rules.py  test_event_sourcing.py  test_guardrails.py  test_issue_125_delegation_refactor.py  test_issue_128_metrics_refactor.py  test_mitre_attack_engine.py  test_model_fallback_chain.py  test_rag_generator.py  test_template_security.py  test_vectorstore_manager.py  test_vm_attack_agent.py
threatsimgpt/: __init__.py  __main__.py  metrics.py
threatsimgpt/analytics/: __init__.py
threatsimgpt/api/: __init__.py  main.py
threatsimgpt/blue_team/: __init__.py
threatsimgpt/cli/: __init__.py  datasets.py  deploy.py  detect.py  feedback.py  intelligence.py  llm.py  logs.py  main.py  manuals.py  mcp.py  rag.py  templates.py  validate.py  vm.py
threatsimgpt/config/: __init__.py  exceptions.py  loader.py  models.py  secure_loader.py  validate_env.py  validator.py  yaml_loader.py
threatsimgpt/core/: __init__.py  adaptive_difficulty.py  ai_enhanced_playbooks.py  batch_processor.py  event_sourcing.py  exceptions.py  mitigation_generator.py  models.py  output_models.py  playbook_validator.py  postgres_event_store.py  simulation_logger.py  simulator.py  team_playbooks.py  template_manager_pro.py  template_manager_refactored.py
threatsimgpt/datasets/: base_processor.py  manager.py
threatsimgpt/deployment/: __init__.py  base.py  integrations.py
threatsimgpt/feedback/: __init__.py  analyzer.py  enhancer.py  models.py  orchestrator.py
threatsimgpt/intelligence/: __init__.py  compliance.py  hypothesis_generator.py  integrations.py  mitre_attack.py  models.py  services.py
threatsimgpt/llm/: __init__.py  advanced_integration.py  advanced_prompts.py  advanced_reasoning.py  base.py  enhanced_prompts.py  exceptions.py  fallback_chain.py  generation.py  guardrails.py  manager.py  model_manager.py  models.py  prompts.py  providers_new.py  rlhf_multiagent.py  validation.py
threatsimgpt/mcp/: __init__.py  config.py  server.py
threatsimgpt/rag/: __init__.py  config.py  generator.py  ingest.py  models.py  refactored_vectorstore.py  retriever.py  vectorstore.py
threatsimgpt/safety/: __init__.py  content_filter.py  exceptions.py  models.py
threatsimgpt/security/: __init__.py  circuit_breaker.py  config.py  enhanced_audit_logger.py  metrics.py  rate_limiter.py  refactored_validator.py  sharded_cache.py  template_validator.py  validation_engine.py
threatsimgpt/utils/: __init__.py  auto_content_saver.py  logging.py
threatsimgpt/vm/: __init__.py  agent.py  analysis_engine.py  models.py  operator.py  safety.py
threatsimgpt/workers/: __init__.py  consumer.py  handlers.py  job_store.py  queue.py
(+58 files in other folders)
