[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threatsimgpt"
version = "0.1.0"
description = "ThreatSimGPT – AI-powered threat simulation and intelligence platform"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
authors = [{ name = "Uzo" }]
dependencies = []

[project.scripts]
threatsimgpt = "threatsimgpt.cli.main:main"


[tool.setuptools]
packages = ["threatsimgpt"]

[tool.setuptools.package-data]
threatsimgpt = ["**/*.yaml", "**/*.yml", "**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
