[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threatsimgpt"
version = "0.1.0"
description = "ThreatSimGPT – AI-powered threat simulation and intelligence platform"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = """
ThreatSimGPT Dual License

This software is dual-licensed under the terms outlined below. You may choose to use this software under either license.

===========================================================================

PERSONAL USE LICENSE (FREE)

For personal, non-commercial use, ThreatSimGPT is licensed under the MIT License:

MIT License

Copyright (c) 2026 ThreatSimGPT Team

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

===========================================================================

COMMERCIAL/ENTERPRISE LICENSE (REQUIRED)

For any commercial, enterprise, or professional use, including but not limited to:

- Use in commercial products or services
- Use by companies or organizations for business purposes
- Use in revenue-generating activities
- Use in consulting or professional services
- Distribution as part of commercial software

A commercial license must be obtained from ThreatSimGPT Team.

To obtain a commercial license, please contact:
Email: threatsimgpt@hotmail.com
GitHub: https://github.com/threatsimgpt-AI/ThreatSimGPT

Commercial licenses include:
- Priority support and maintenance
- Additional enterprise features
- Custom integration support
- Service level agreements (SLAs)
- Indemnification

===========================================================================

USAGE DETERMINATION

If you are unsure whether your use case requires a commercial license, please contact us.
When in doubt, a commercial license is required.

Violations of this dual licensing model may result in legal action.
""" }
authors = [{ name = "ThreatSimGPT Team" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "rich>=13.7.0",
    "openai>=1.6.1",
    "anthropic>=0.8.1",
    "asyncpg>=0.29.0",
    "redis>=5.0.1",
    "sqlalchemy[asyncio]>=2.0.23",
    "alembic>=1.13.0",
    "httpx>=0.25.2",
    "jinja2>=3.1.2",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "tenacity>=8.2.3",
    "anyio>=4.5",
    "mcp>=1.0.0",
    "starlette>=0.40.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["threatsimgpt*"]
exclude = ["tests*", "docs*", "dev*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.5",
    "coverage>=7.3.2",
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.8",
]
test = [
    "factory-boy>=3.3.0",
    "faker>=20.1.0",
    "httpx>=0.25.2",
    "respx>=0.20.2",
]

[project.scripts]
threatsimgpt = "threatsimgpt.cli.main:main"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E402",   # Module level import not at top
    "E722",   # Bare except
    "E741",   # Ambiguous variable name
    "F401",   # Unused import
    "F402",   # Import shadowed by loop var
    "F541",   # f-string without placeholders (cosmetic)
    "F811",   # Redefinition of unused name
    "F821",   # Undefined name
    "F841",   # Local variable assigned but never used
    "W291",   # Trailing whitespace
    "W292",   # No newline at end of file
    "W293",   # Blank line contains whitespace
]
fixable = ["ALL"]
unfixable = []

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "openai.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
source = ["threatsimgpt"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = [
    "B101",  # assert_used - acceptable in non-production code
    "B104",  # hardcoded_bind_all_interfaces - intentional for API servers
    "B108",  # hardcoded_tmp_directory - acceptable for temp files
    "B110",  # try_except_pass - sometimes intentional
    "B113",  # request_without_timeout - handled at higher level
    "B404",  # blacklist import subprocess - necessary for VM management
    "B506",  # yaml_load - using safe loader already
    "B601",  # paramiko calls - necessary for SSH
    "B603",  # subprocess_without_shell - using list args (safe)
    "B607",  # start_process_with_partial_path - docker commands
    "B615",  # huggingface unsafe download - handled separately
]
